--- a/client/clone-trello/package.json
+++ b/client/clone-trello/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.3",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.10.1",
